# mnist_cudnn

./: CMakeLists.txt  README.md  package.xml
example/test/: mnist_alex_test.cpp  mnist_resnet_test.cpp  mnist_rnn_test.cpp  mnist_vgg16_test.cpp
example/train/: mnist_alex_train.cpp  mnist_cnn_train.cpp  mnist_resnet_train.cpp  mnist_rnn_train.cpp  mnist_vgg16_train.cpp
include/mnist_cudnn/: Blob.h  Helper.h  Layer.h  Loss.h  Mnist.h  Network.h
src/: mnist_test.cpp  mnist_train.cpp
src/Blob/: Blob.cpp
src/Helper/: Helper.cpp
src/Layer/: Activation.cu  Add.cu  Conv2D.cu  Dense.cu  Dropout.cu  FusedBatchNormalization.cu  Layer.cu  Lrn.cu  Pad.cu  Pooling.cu  Rnn.cu  Softmax.cu
src/Loss/: Loss.cu
src/Mnist/: Mnist.cpp
src/NetWork/: NetWork.cpp
